Worked around chromium bug with transforms and overflow:hidden

--- a/main.styl
+++ b/main.styl
@@ -3,97 +3,107 @@
 // geometery
 
 body
-  transition color 0.5s, background-color 2s
-  max-width  960px
-  margin     8px auto
+	transition color 0.5s, background-color 2s
+	max-width  960px
+	margin     8px auto
 
 body.no-anim, body.no-anim > *
-  transition none
+	transition none
 
 a:focus
-  outline 0 // disable ugly firefox dotted outlines
+	outline 0 // disable ugly firefox dotted outlines
 
 // transitions
 
 a
-  transition color 0.5s, text-shadow 2s
+	transition color 0.5s, text-shadow 2s
 
-std_transforms = border-radius 0.3s, box-shadow 0.5s, background-color 1s
+std_transforms = border-radius 0.3s, box-shadow 0.5s, background-color 1s, border-color 1s
 
-a#logo > div,
-a#change-theme
-  transition std_transforms
+a#logo > div
+	transition std_transforms
 
+a#change-theme,
 a#change-theme > div
-  transition transform 0.5s, std_transforms
-  // workaround because nib doesn't change transform to -prefix-transform
-  -webkit-transition -webkit-transform 0.5s, std_transforms
-  -moz-transition -moz-transform 0.5s, std_transforms
-  -ms-transition -ms-transform 0.5s, std_transforms
-  -o-transition -o-transform 0.5s, std_transforms
+	transition transform 0.5s, std_transforms
+	// workaround because nib doesn't change transform to -prefix-transform
+	-webkit-transition -webkit-transform 0.5s, std_transforms
+	-moz-transition -moz-transform 0.5s, std_transforms
+	-ms-transition -ms-transform 0.5s, std_transforms
+	-o-transition -o-transform 0.5s, std_transforms
 
 // logo
 
 a#logo
-  display block
-  position relative
-  float left
-  width 128px
-  height 32px
+	font-size 0
+	display block
+	position relative
+	float left
+	width 128px
+	height 32px
 
 a#logo > div
-  width 16px
-  height 16px
-  position absolute
+	width 16px
+	height 16px
+	position absolute
 
 // theme switcher
 
 a#change-theme
-  display block
-  overflow hidden
-  float right
-  width 32px
-  height 32px
-  > div
-    width 100%
-    height 100%
+	display block
+	overflow hidden
+	float right
+	width 30px
+	height 30px
+	> div
+		width 0
+		height 0
 
 // themes
 
 theme(front, back, link, visited, hover, shadow)
-  color front
-  background back
+	color front
+	background back
 
-  a
-    color link
-  a:visited
-    color visited
-  a:hover, a:active
-    color hover
-    text-shadow 0 0 1em shadow
+	a
+		color link
+	a:visited
+		color visited
+	a:hover, a:active
+		color hover
+		text-shadow 0 0 1em shadow
 
-  a#logo > div
-    background front
+	a#logo > div
+		background front
 
-  a#change-theme > div
-    background front
-    transform scale(2,2) rotate(45deg) translate(dark(back) && 50% || -50%)
+	a#change-theme
+		border 1px solid front
+		if dark(back)
+			transform rotate(180deg)
 
-  a#logo > div:hover
-    box-shadow 0 0 2em shadow
-    background hover
-    border-radius 50%
+	a#change-theme > div
+		border-top 15px solid front
+		border-left 15px solid front
+		border-right 15px solid transparent
+		border-bottom 15px solid transparent
+		//transform scale(2,2) rotate(dark(back) && 45deg || -135deg) translate(50%)
 
-  a#change-theme:hover
-    box-shadow 0 0 2em shadow
-    border-radius 50%
-    > div
-      background hover
-      transform none
-      border-radius 50%
+	a#logo > div:hover
+		box-shadow 0 0 2em shadow
+		background hover
+		border-radius 50%
+
+	a#change-theme:hover
+		box-shadow 0 0 2em shadow
+		border-radius 50%
+		border-color hover
+		> div
+			border-radius 15px
+			border-top-color hover
+			border-left-color hover
 
 body.dark
-  theme(#fffff5, #333338, #cdd, #ddc, #0ff, #fff)
+	theme(#fffff5, #333338, #cdd, #ddc, #0ff, #fff)
 
 body.light
-  theme(#000, #fff, #588, #443, #0cc, #0ff)
+	theme(#000, #fff, #588, #443, #0cc, #0ff)
